Add hero CTAs with smooth scrolling and update section IDs
- Add two hero CTAs: 'View My Work' and 'Learn More About Me ↓'
- Update section IDs: #about → #about-me, #projects → #my-work
- Implement smooth scrolling with prefers-reduced-motion support
- Add section highlight animation on anchor link arrival
- Style hero CTAs to match existing design system (pill shape, consistent sizing)
- Add accessibility features: focus management and keyboard navigation
- Update navigation component links to use new section IDs

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -25,7 +25,7 @@ const { currentPath = "/" } = Astro.props;
       </a>
     </li>
     <li>
-      <a href="/#about" title="About">
+      <a href="/#about-me" title="About">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="24"
@@ -44,7 +44,7 @@ const { currentPath = "/" } = Astro.props;
       </a>
     </li>
     <li>
-      <a href="/#projects" title="Projects">
+      <a href="/#my-work" title="Projects">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="24"
@@ -186,7 +186,7 @@ const { currentPath = "/" } = Astro.props;
       </a>
     </li>
     <li>
-      <a href="/#about" title="About">
+      <a href="/#about-me" title="About">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 24 24"
@@ -203,7 +203,7 @@ const { currentPath = "/" } = Astro.props;
       </a>
     </li>
     <li>
-      <a href="/#projects" title="Projects">
+      <a href="/#my-work" title="Projects">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 24 24"
